also fix header alignment for multiselect columns

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -53,6 +53,7 @@ select.quota.active { background: #fff; }
 /* positioning fixes */
 #newuser { position:relative; top:-3px; }
 #newuser .multiselect { top:1px; }
+#headerGroups, #headerSubAdmins, #headerQuota { padding-left:18px; }
 
 
 /* APPS */
